Some Bugs Fixed :)

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
     </div>
   </section>
 
+
   <!-- SECTION B -->
 
   <section class="sec_b">
@@ -87,40 +88,33 @@
       <div class="row">
         <div class="col">
           <div class="img">
-            <img src="img/img_2184.jpg" alt="">
+            <a href="#"><img src="img/img_2184.png" alt=""></a>
           </div>
-          <a href="#">Auditoriums & Classrooms</a>
         </div>
         <div class="col">
-          <img src="img/img_2671.jpg" alt="">
-          <a href="#">Auditoriums & Classrooms</a>
+          <a href="#"><img src="img/img_2671.png" alt=""></a>
         </div>
         <div class="col">
-          <img src="img/computer_lab_4.jpg" alt="">
-          <a href="#">Auditoriums & Classrooms</a>
+          <a href="#"><img src="img/computer_lab_4.png" alt=""></a>
         </div>
       </div>
 
       <div class="row">
         <div class="col">
           <div class="img">
-            <img src="img/12._img_0591.jpg" alt="">
+            <a href="#"><img src="img/12.png" alt=""></a>
           </div>
-          <a href="#">Auditoriums & Classrooms</a>
         </div>
         <div class="col">
-          <img src="img/apu_cybersecurity_talent_zone.jpg" alt="">
-          <a href="#">Auditoriums & Classrooms</a>
+          <a href="#"><img src="img/apu_cybersecurity_talent_zone.png" alt=""></a>
         </div>
         <div class="col">
-          <img src="img/4._img_0493.jpg" alt="">
-          <a href="#">Auditoriums & Classrooms</a>
+          <a href="#"><img src="img/4.png" alt=""></a>
         </div>
       </div>
 
     </div>
   </section>
-
 
   <!-- SECTION C -->
 
@@ -142,23 +136,23 @@
                   <img src="img/ai-close-up-code-160107.jpg" alt="">
                 </div>
                 <h4>COMPUTER SCIENCE</h4>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur voluptatibus, quae? Commodi nostrum, hic libero incidunt quis optio aspernatur perspiciatis magnam sunt, voluptatibus dolorum unde temporibus aliquam quidem,
-                    sapiente odit..</p>
-                  <div class="btn">READ</div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur voluptatibus, quae? Commodi nostrum, hic libero incidunt quis optio aspernatur perspiciatis magnam sunt, voluptatibus dolorum unde temporibus aliquam quidem,
+                  sapiente odit..</p>
+                <div class="btn">READ</div>
               </div>
               <div class="col">
                 <img src="img/business-commerce-computer-132700.jpg" alt="">
                 <h4>ENGINEERING</h4>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur voluptatibus, quae? Commodi nostrum, hic libero incidunt quis optio aspernatur perspiciatis magnam sunt, voluptatibus dolorum unde temporibus aliquam quidem,
-                    sapiente odit..</p>
-                  <div class="btn">READ</div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur voluptatibus, quae? Commodi nostrum, hic libero incidunt quis optio aspernatur perspiciatis magnam sunt, voluptatibus dolorum unde temporibus aliquam quidem,
+                  sapiente odit..</p>
+                <div class="btn">READ</div>
               </div>
               <div class="col">
                 <img src="img/art-artistic-bisexual-1209843.jpg" alt="">
                 <h4>VISUAL EFFECTS</h4>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur voluptatibus, quae? Commodi nostrum, hic libero incidunt quis optio aspernatur perspiciatis magnam sunt, voluptatibus dolorum unde temporibus aliquam quidem,
-                    sapiente odit..</p>
-                  <div class="btn">READ</div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur voluptatibus, quae? Commodi nostrum, hic libero incidunt quis optio aspernatur perspiciatis magnam sunt, voluptatibus dolorum unde temporibus aliquam quidem,
+                  sapiente odit..</p>
+                <div class="btn">READ</div>
               </div>
             </div>
           </div>
@@ -172,23 +166,23 @@
                   <img src="img/calculate-calculator-close-up-221174.jpg" alt="">
                 </div>
                 <h4>FINANCE</h4>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur voluptatibus, quae? Commodi nostrum, hic libero incidunt quis optio aspernatur perspiciatis magnam sunt, voluptatibus dolorum unde temporibus aliquam quidem,
-                    sapiente odit..</p>
-                  <div class="btn">READ</div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur voluptatibus, quae? Commodi nostrum, hic libero incidunt quis optio aspernatur perspiciatis magnam sunt, voluptatibus dolorum unde temporibus aliquam quidem,
+                  sapiente odit..</p>
+                <div class="btn">READ</div>
               </div>
               <div class="col">
                 <img src="img/agreement-business-clapping-990817.jpg" alt="">
                 <h4>MANAGEMENT</h4>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur voluptatibus, quae? Commodi nostrum, hic libero incidunt quis optio aspernatur perspiciatis magnam sunt, voluptatibus dolorum unde temporibus aliquam quidem,
-                    sapiente odit..</p>
-                  <div class="btn">READ</div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur voluptatibus, quae? Commodi nostrum, hic libero incidunt quis optio aspernatur perspiciatis magnam sunt, voluptatibus dolorum unde temporibus aliquam quidem,
+                  sapiente odit..</p>
+                <div class="btn">READ</div>
               </div>
               <div class="col">
                 <img src="img/computer-desk-electronics-374074.jpg" alt="">
                 <h4>PRODUCT DESIGN</h4>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur voluptatibus, quae? Commodi nostrum, hic libero incidunt quis optio aspernatur perspiciatis magnam sunt, voluptatibus dolorum unde temporibus aliquam quidem,
-                    sapiente odit..</p>
-                  <div class="btn">READ</div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur voluptatibus, quae? Commodi nostrum, hic libero incidunt quis optio aspernatur perspiciatis magnam sunt, voluptatibus dolorum unde temporibus aliquam quidem,
+                  sapiente odit..</p>
+                <div class="btn">READ</div>
               </div>
             </div>
           </div>
@@ -309,9 +303,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
-  <script type="text/javascript">
-    // When the user scrolls down 20px from the top of the document, slide down the navbar
-    // When the user scrolls to the top of the page, slide up the navbar (50px out of the top view)
+  <!-- Navbar Scrolling -->
+
+  <script>
     window.onscroll = function() {
       scrollFunction()
     };
@@ -320,7 +314,7 @@
       if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
         document.getElementById("navbar").style.top = "0";
       } else {
-        document.getElementById("navbar").style.top = "-50px";
+        document.getElementById("navbar").style.top = "-60px";
       }
     }
   </script>
