--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Life at APU</a>
+          <a class="nav-link" href="#life_apu">Life at APU</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About Us</a>
+          <a class="nav-link" href="#about">About Us</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -253,7 +253,7 @@
 
   <!-- FOOTER -->
 
-  <footer>
+  <footer id="about">
     <div class="container">
       <div class="row">
         <div class="col-4"><a href="#header"><img src="img/logo2.png" alt=""></a></div>
