bug fixed navbar

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 
     <div id="navbar">
       <div class="container">
+        <a href="#"><img src="img/logo2.png" alt=""></a>
         <a href="#header">HOME</a>
         <a href="#life_apu">LIFE AT APU</a>
         <a href="#courses">OUR COURSES</a>
