--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <div id="navbar">
       <div class="container">
-        <a href="#"><img src="img/logo2.png" alt=""></a>
+        <a href="#"><img src="img/logo2.png" alt="apu logo"></a>
         <a href="#header">HOME</a>
         <a href="#life_apu">LIFE AT APU</a>
         <a href="#courses">OUR COURSES</a>
@@ -206,7 +206,6 @@
             </div>
           </div>
         </div>
-
         <!-- Third Slide Row -->
         <div class="carousel-item">
           <div class="row">
@@ -324,7 +323,7 @@
 
   <!-- Navbar Scrolling -->
 
-  <script>
+  <script type="text/javascript">
     window.onscroll = function() {
       scrollFunction()
     };
@@ -333,7 +332,7 @@
       if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
         document.getElementById("navbar").style.top = "0";
       } else {
-        document.getElementById("navbar").style.top = "-60px";
+        document.getElementById("navbar").style.top = "-80px";
       }
     }
   </script>
